refactor: gitFirst -> git(0)